--- a/products_comparison.config_translation.yml
+++ b/products_comparison.config_translation.yml
@@ -1,5 +1,5 @@
 products_comparison.configuration:
   title: 'Sentinel-2 products comparison configuration'
-  base_route_name: products_comparison.configuration
+  base_route_name: products_comparison.admin_config_form
   names:
     - products_comparison.configuration
