Changed title for link

--- a/products_comparison.links.menu.yml
+++ b/products_comparison.links.menu.yml
@@ -1,5 +1,5 @@
 products_comparison:
-  title: 'Products Comparison'
+  title: 'S2 Products Comparison'
   description: 'Sentinel-2 products comparison'
   route_name: products_comparison
   parent: metsis.services
