--- a/products_comparison.routing.yml
+++ b/products_comparison.routing.yml
@@ -25,7 +25,7 @@ metsis.services:
     _permission: 'access content'
 
 products_comparison.admin_config_form:
-  path: '/admin/config/metno/products_comparison'
+  path: '/admin/config/metsis/products_comparison'
   defaults:
     _form: '\Drupal\products_comparison\Form\ProductsComparisonConfigurationForm'
     _title: 'Sentinel-2 products comparison configuration'
@@ -40,5 +40,14 @@ system.admin_config_metno:
     _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
     _title: 'METNO'
     description: 'METNO Specific configuraton'
+  requirements:
+    _permission: 'administer site configuration'
+
+system.admin_config_metsis:
+  path: '/admin/config/metsis'
+  defaults:
+    _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
+    _title: 'METSIS'
+    description: 'METSIS Specific configuraton'
   requirements:
     _permission: 'administer site configuration'
