--- a/products_comparison.links.menu.yml
+++ b/products_comparison.links.menu.yml
@@ -15,7 +15,7 @@ products_comparison.admin_config_form:
   title: 'Products comparison configuration'
   description: 'Configure products comparison'
   route_name: products_comparison.admin_config_form
-  parent: metno.group.admin
+  parent: metsis.group.admin
   weight: 99
 
 metno.group.admin:
@@ -23,4 +23,11 @@ metno.group.admin:
   route_name: system.admin_config_metno
   parent: system.admin_config
   description: 'METNO Configuration'
+  weight: -999
+
+metsis.group.admin:
+  title: 'METSIS'
+  route_name: system.admin_config_metsis
+  parent: system.admin_config
+  description: 'METSIS Configuration'
   weight: -999
