Fixed deperecated libraries. Drupal 10 compability

--- a/products_comparison.info.yml
+++ b/products_comparison.info.yml
@@ -1,7 +1,7 @@
 name: 'S2 Products Comparison'
 description: 'Tool for comparing two Sentinel-2 products'
 type: module
-core_version_requirement: ^8.8 || ^9
+core_version_requirement: ^8.8 || ^9 || ^10
 version: 1.0.1
 package: METSIS
 dependencies:
