--- a/products_comparison.libraries.yml
+++ b/products_comparison.libraries.yml
@@ -18,7 +18,7 @@ products_comparison:
   dependencies:
     - core/jquery
     - jquery_ui/core
-    - core/jquery.once
+    - core/once
     - core/drupal
     - core/drupalSettings
     - core/drupal.ajax
