--- a/products_comparison.info.yml
+++ b/products_comparison.info.yml
@@ -2,6 +2,7 @@ name: 'S2 Products Comparison'
 description: 'Tool for comparing two Sentinel-2 products'
 type: module
 core_version_requirement: ^8.8 || ^9 || ^10
-version: 1.0.1
+version: 2.0.0
 package: METSIS
+configure: products_comparison.admin_config_form
 dependencies:
