Fixed javascript and updated librarydefinition and version

--- a/products_comparison.libraries.yml
+++ b/products_comparison.libraries.yml
@@ -1,18 +1,19 @@
 products_comparison:
-  version: 1.0
+  version: 1.4
   css:
     component:
-      /libraries/openlayers-6.5.0/ol.css: {}
+
+      /libraries/openlayers-6.5.0/ol.css: {minified: true }
 #      /libraries/ol-layerswitcher-3.8.3/dist/ol-layerswitcher.css: {}
       /libraries/ol-ext-3.1.17/dist/ol-ext.css: {}
 #      css/ol-ext.css: {}
     theme:
       css/style_selection.css: {}
   js:
-    /libraries/proj4js-2.6.3/dist/proj4.js: {}
-    /libraries/openlayers-6.5.0/ol.js: {}
+    /libraries/proj4js-2.6.3/dist/proj4.js: { minified: true, preprocess: false }
+    /libraries/openlayers-6.5.0/ol.js: { minified: true }
 #    /libraries/ol-layerswitcher-3.8.3/dist/ol-layerswitcher.js: {}
-    /libraries/ol-ext-3.1.17/dist/ol-ext.js: {}
+    /libraries/ol-ext-3.1.17/dist/ol-ext.min.js: {  minified: true }
 #    js/ol-ext.js: {}
     js/comparison_slider.js: {}
   dependencies:
